--- a/details.html
+++ b/details.html
@@ -11,52 +11,57 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="fondosala">     
-        <img src="Logo_Amazing_Events.png" class="rounded float-start" alt="Logo" width="250" height="100">
-        <div class="container-fluid row bg-black align-self-center">
-            <nav class="navbar navbar-expand-lg bg-body-black">
-                <div class="container-fluid">
-                  <a class="navbar-brand btn btn-outline-light btn-lg text-white" href="index.html">Home</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item p-2">
-                        <a class="nav-link btn btn-outline-light btn-lg text-white" aria-current="page" href="upcoming.html">Upcoming Events</a>
-                      </li>
-                      <li class="nav-item p-2">
-                        <a class="nav-link btn btn-outline-light btn-lg text-white" href="past.html">Past Events</a>
-                      </li>
-                      <li class="nav-item p-2">
-                        <a class="nav-link  btn btn-outline-light btn-lg text-white" href="contact.html">Contact</a>
-                      </li>
-                      <li class="nav-item p-2">
-                        <a class="nav-link  btn btn-outline-light btn-lg text-white" href="stats.html">Stats</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-        </div>
-            <div class="card mb-3 mg-3" style="max-width: 768px;">
-                <div class="row g-0 d-flex justify-content-center">
-                  <div class="col-md-4">
-                    <img src="bannerfiestadelcine.jpg" class="img-fluid rounded-start" alt="fiestadelcine">
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <h5 class="card-title">Cinema</h5>
-                      <p class="card-text">Del domingo 12 al martes 14 inclusive se podrá disfrutar de una película en las salas participantes a solo $450.</p>
-                      <p class="card-text">El precio promocional aplicará para entradas 2D y 3D, y la venta anticipada ya está disponible en los sitios web y boleterías de los cines que participan de este Festival. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-muted">Podés acceder desde el sitio fiestadelcine.com.ar</small></p>
-                    </div>
-                  </div>
+  <header>
+    <div class="container-box2">
+      <div class="fondosala">     
+      <img src="Logo_Amazing_Events.png" class="rounded float-start" alt="Logo" width="250" height="100">
+      <div class="container-fluid row bg-black align-self-center">
+          <nav class="navbar navbar-expand-lg bg-body-black">
+              <div class="container-fluid">
+                <a class="navbar-brand btn btn-outline-light btn-lg text-white" href="index.html">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item p-2">
+                      <a class="nav-link btn btn-outline-light btn-lg text-white" aria-current="page" href="upcoming.html">Upcoming Events</a>
+                    </li>
+                    <li class="nav-item p-2">
+                      <a class="nav-link btn btn-outline-light btn-lg text-white" href="past.html">Past Events</a>
+                    </li>
+                    <li class="nav-item p-2">
+                      <a class="nav-link  btn btn-outline-light btn-lg text-white" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item p-2">
+                      <a class="nav-link  btn btn-outline-light btn-lg text-white" href="stats.html">Stats</a>
+                    </li>
+                  </ul>
                 </div>
               </div>
+            </nav>
+      </div>  
+      </div>
+  </div>
+  </header>
+  <main class="flex-grow-1">
+    <div class="card mb-3 mg-3" style="max-width: 768px;">
+      <div class="row g-0 d-flex justify-content-center">
+        <div class="col-md-4">
+          <img src="bannerfiestadelcine.jpg" class="img-fluid rounded-start" alt="fiestadelcine">
         </div>
-    </div>   
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Cinema</h5>
+            <p class="card-text">Del domingo 12 al martes 14 inclusive se podrá disfrutar de una película en las salas participantes a solo $450.</p>
+            <p class="card-text">El precio promocional aplicará para entradas 2D y 3D, y la venta anticipada ya está disponible en los sitios web y boleterías de los cines que participan de este Festival. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Podés acceder desde el sitio fiestadelcine.com.ar</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+       
     <footer>
         <div class="container-fluid">
             <div class="container-icono">
