--- a/stats.html
+++ b/stats.html
@@ -11,7 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container-fluid">
+  <header>
+    <div class="container-box2">
       <div class="fondosala">    
         <img src="Logo_Amazing_Events.png" class="rounded float-start" alt="Logo" width="250" height="100">
         <div class="container-fluid row bg-black align-self-center">
@@ -40,122 +41,125 @@
               </div>
             </nav>
         </div>
-        <div class="container d-flex justify-content-between p-3 mb-2 bg-secondary text-black">
-        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-left" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-        </svg>
-        <h2  class="display-3 text-center p-1 mb-2 bg-secondary text-black">Stats</h2>
-        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-right" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-        </svg>
-        </div>
-        <div class="container">
-        <table class="table">
-            <thead>
-            <tr>
-                <th colspan="3" class="fs-3 text-start p-2 mb-2 bg-danger" >Events Statistics</th>
-            </tr>
-            <tr>
-                <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Events with the highest percentage of attendance</th>
-                <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Events with the lowest percentage of attendance</th>
-                <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Events with target cpacity</th>
-            </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-              </tr>
-              <tr>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-              </tr>
-            </tbody>
-          </table>     
-          <table class="table">
-            <thead>
-            <tr>
-                <th colspan="3" class="fs-3 text-start p-2 mb-2 bg-danger" >Upcoming events Statistics by category</th>
-            </tr>
-            <tr>
-                <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Categories</th>
-                <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Revenues</th>
-                <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Percetage of attendence</th>
-            </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-              </tr>
-              <tr>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-              </tr>
-              <tr>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-              </tr>
-              <tr>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-              </tr>
-            </tbody>
-          </table>
-          <table class="table">
-            <thead>
-            <tr>
-                <th colspan="3" class="fs-3 text-start p-2 mb-2 bg-danger" >Past events Statistics by category</th>
-            </tr>
-            <tr>
-                <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Categories</th>
-                <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Revenues</th>
-                <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Percetage of attendence</th>
-            </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-              </tr>
-              <tr>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-              </tr>
-              <tr>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-              </tr>
-              <tr>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-              </tr>
-              <tr>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-              </tr>
-              <tr>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-                <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
       </div>
     </div>
-    <footer>
+  </header>
+  <main class="flex-grow-1">
+    <div class="container d-flex justify-content-between p-3 mb-2 bg-secondary text-black">
+      <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-left" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+      </svg>
+      <h2  class="display-3 text-center p-1 mb-2 bg-secondary text-black">Stats</h2>
+      <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-right" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+      </svg>
+      </div>
+      <div class="container">
+      <table class="table">
+          <thead>
+          <tr>
+              <th colspan="3" class="fs-3 text-start p-2 mb-2 bg-danger" >Events Statistics</th>
+          </tr>
+          <tr>
+              <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Events with the highest percentage of attendance</th>
+              <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Events with the lowest percentage of attendance</th>
+              <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Events with target cpacity</th>
+          </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+            </tr>
+            <tr>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+            </tr>
+          </tbody>
+        </table>     
+        <table class="table">
+          <thead>
+          <tr>
+              <th colspan="3" class="fs-3 text-start p-2 mb-2 bg-danger" >Upcoming events Statistics by category</th>
+          </tr>
+          <tr>
+              <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Categories</th>
+              <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Revenues</th>
+              <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Percetage of attendence</th>
+          </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+            </tr>
+            <tr>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+            </tr>
+            <tr>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+            </tr>
+            <tr>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+            </tr>
+          </tbody>
+        </table>
+        <table class="table">
+          <thead>
+          <tr>
+              <th colspan="3" class="fs-3 text-start p-2 mb-2 bg-danger" >Past events Statistics by category</th>
+          </tr>
+          <tr>
+              <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Categories</th>
+              <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Revenues</th>
+              <th class="p-2 bg-light bg-opacity-15 border border-info rounded-end">Percetage of attendence</th>
+          </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+            </tr>
+            <tr>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+            </tr>
+            <tr>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+            </tr>
+            <tr>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+            </tr>
+            <tr>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+            </tr>
+            <tr>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+              <td class="p-3 bg-light bg-opacity-15 border border-info rounded-end"></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+  </main>
+  <footer>
       <div class="container-fluid">
           <div class="container-icono">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
