--- a/contact.html
+++ b/contact.html
@@ -11,66 +11,70 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="fondosala">     
-        <img src="Logo_Amazing_Events.png" class="rounded float-start p-3" alt="Logo" width="250" height="100">
-        <div class="container-fluid row bg-black align-self-center">
-            <nav class="navbar navbar-expand-lg bg-body-black">
-                <div class="container-fluid">
-                  <a class="navbar-brand btn btn-outline-light btn-lg text-white" href="index.html">Home</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item p-2">
-                        <a class="nav-link btn btn-outline-light btn-lg text-white" aria-current="page" href="upcoming.html">Upcoming Events</a>
-                      </li>
-                      <li class="nav-item p-2">
-                        <a class="nav-link btn btn-outline-light btn-lg text-white" href="past.html">Past Events</a>
-                      </li>
-                      <li class="nav-item p-2">
-                        <a class="nav-link  btn btn-outline-light btn-lg text-white" href="contact.html">Contact</a>
-                      </li>
-                      <li class="nav-item p-2">
-                        <a class="nav-link  btn btn-outline-light btn-lg text-white" href="stats.html">Stats</a>
-                      </li>
-                    </ul>
-                  </div>
+  <header>
+    <div class="container-box2">
+      <div class="fondosala">     
+      <img src="Logo_Amazing_Events.png" class="rounded float-start p-3" alt="Logo" width="250" height="100">
+      <div class="container-fluid row bg-black align-self-center">
+          <nav class="navbar navbar-expand-lg bg-body-black">
+              <div class="container-fluid">
+                <a class="navbar-brand btn btn-outline-light btn-lg text-white" href="index.html">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item p-2">
+                      <a class="nav-link btn btn-outline-light btn-lg text-white" aria-current="page" href="upcoming.html">Upcoming Events</a>
+                    </li>
+                    <li class="nav-item p-2">
+                      <a class="nav-link btn btn-outline-light btn-lg text-white" href="past.html">Past Events</a>
+                    </li>
+                    <li class="nav-item p-2">
+                      <a class="nav-link  btn btn-outline-light btn-lg text-white" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item p-2">
+                      <a class="nav-link  btn btn-outline-light btn-lg text-white" href="stats.html">Stats</a>
+                    </li>
+                  </ul>
                 </div>
-              </nav>
-        </div>
-        <div class="container d-flex justify-content-between">
-            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-left" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-            </svg>
-            <h2  class="display-3 text-center text-black">Contact</h2>
-            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-right" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-            </svg>
-            </div>
-            <div class="container col-5">
-                <Form class="form-control border-black">
-                    <div class="form-control border-black">
-                        <label for="exampleFormControlInput1" class="form-label border-black">Name:</label>
-                        <input type="text" class="form-control border-black" id="exampleFormControlInput1" placeholder="your name">
-                    </div>
-                    <div class="form-control">
-                        <label for="staticEmail" class="form-label">Email address:</label>
-                        <input type="email" class="form-control border-black" id="staticEmail" placeholder="email@example.com">
-                    </div>
-                    <div class="form-control">
-                        <label for="exampleFormControlTextarea1" class="form-label">Mensagge:</label>
-                        <textarea class="form-control border-black" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
-                    <div class="col-auto">
-                        <button type="submit" class="btn btn-primary mb-3">Submit</button>
-                    </div>
-                </Form>
-            </div>
-        </div>
-    </div>   
-    <footer>
+              </div>
+            </nav>
+      </div>
+      </div>
+    </div>
+  </header>
+  <main class="flex-grow-1">
+    <div class="container d-flex justify-content-between">
+      <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-left" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+      </svg>
+      <h2  class="display-3 text-center text-black">Contact</h2>
+      <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-right" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+      </svg>
+      </div>
+      <div class="container col-5">
+          <Form class="form-control border-black">
+              <div class="form-control border-black">
+                  <label for="exampleFormControlInput1" class="form-label border-black">Name:</label>
+                  <input type="text" class="form-control border-black" id="exampleFormControlInput1" placeholder="your name">
+              </div>
+              <div class="form-control">
+                  <label for="staticEmail" class="form-label">Email address:</label>
+                  <input type="email" class="form-control border-black" id="staticEmail" placeholder="email@example.com">
+              </div>
+              <div class="form-control">
+                  <label for="exampleFormControlTextarea1" class="form-label">Mensagge:</label>
+                  <textarea class="form-control border-black" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+              <div class="col-auto">
+                  <button type="submit" class="btn btn-primary mb-3">Submit</button>
+              </div>
+          </Form>
+      </div>
+  </main>
+  <footer>
         <div class="container-fluid">
             <div class="container-icono">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
@@ -85,7 +89,7 @@
                   <h5 class="display-3 text-end text-black">Cohort</h5>
             </div>
         </div>
-    </footer> 
+  </footer> 
 </body>
 
 </html>
