--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container-box">
+    <header>
+      <div class="container-box2">
         <div class="fondosala">     
         <img src="Logo_Amazing_Events.png" class="rounded float-start p-3" alt="Logo" width="250" height="100">
         <div class="container-fluid row bg-black align-self-center">
@@ -38,46 +39,40 @@
                     </ul>
                   </div>
                 </div>
-              </nav>
+            </nav>
         </div>
-        <div class="container d-flex justify-content-between">
-            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-left" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-              </svg>
-            <h2  class="display-3 text-center text-black">Home</h2>
-            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-right" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-              </svg>
         </div>
-        <nav class="navbar bg-body-black">
-            <div class="container text-black">
-                <form action="/action_page.php" method="get">
-                    <fieldset>
-                        <label for="categ1">Category</label>
-                        <input type="checkbox" name="categ1" value="Category" id="categ1">
-                        <label for="categ2">Category</label>
-                        <input type="checkbox" name="categ2" value="Category" id="categ2">    
-                        <label for="categ3">Category</label>
-                        <input type="checkbox" name="categ3" value="Category" id="categ3">    
-                        <label for="categ4">Category</label>
-                        <input type="checkbox" name="categ4" value="Category" id="categ4">
-                        <label for="categ5">Category</label>
-                        <input type="checkbox" name="categ5" value="Category" id="categ5">
-                    </Fieldset>
-                </form>
-              <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
-            </div>
-        </nav>
-        <div class="container d-flex flex-grow-1">
-            <div class="eventos" id="eventscomp">
+      </div>
+    </header>
+    <main class="flex-grow-1">
+      <div class="container d-flex justify-content-between">
+        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-left text-warning" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+          <a href="index.html"></a>   
+        </svg>
+        <h2  class="display-3 text-center text-black">Home</h2>
+        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="30" fill="black" class="bi bi-chevron-right text-warning" viewBox="0 0 16 16">
+          <a href="upcoming.html"></a>
+            <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+          </svg>
+      </div>
+      <nav class="navbar bg-body-black">
+        <div class="container text-black">
+            <form action="/action_page.php" method="get" id="categcomp" class="d-flex justify-content-between">
                 
-            </div>
+            </form>
+            <form class="d-flex" role="search">
+            <input onkeyup="captureData()" id="id_search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
         </div>
-      </div>  
-    </div>
+      </nav>
+      <div class="container d-flex flex-grow-1">
+        <div class="eventos" id="eventscomp">
+            
+        </div>
+      </div>
+    </main>
     <footer>
         <div class="container-fluid">
             <div class="container-icono">
