--- a/details.html
+++ b/details.html
@@ -45,9 +45,9 @@
   </div>
   </header>
   <main class="flex-grow-1">
-    <div class="card mb-3 mg-3" style="max-width: 768px;">
-      <div class="row g-0 d-flex justify-content-center">
-        <div class="col-md-4">
+    <div class="card mb-3 mg-3 d-flex justify-content-between" style="max-width: 768px;">
+      <div class="row g-0 d-flex justify-content-center" id='detailscomp'>
+        <!-- <div class="col-md-4">
           <img src="bannerfiestadelcine.jpg" class="img-fluid rounded-start" alt="fiestadelcine">
         </div>
         <div class="col-md-8">
@@ -57,11 +57,10 @@
             <p class="card-text">El precio promocional aplicará para entradas 2D y 3D, y la venta anticipada ya está disponible en los sitios web y boleterías de los cines que participan de este Festival. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-muted">Podés acceder desde el sitio fiestadelcine.com.ar</small></p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
-  </main>
-       
+  </main>   
     <footer>
         <div class="container-fluid">
             <div class="container-icono">
@@ -78,6 +77,9 @@
             </div>
         </div>
     </footer>
+    <script src="js/data_ae.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/details.js"></script>
 </body>
 
 </html>
