--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             </Fieldset> 
             </form>
             <form class="d-flex" role="search">
-            <input onkeyup='captureData("name", "checks")' id="name" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <input onkeyup='captureData()' id="name" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
       </nav>
       <div class="container d-flex flex-grow-1">
-        <div class="eventos" id="eventscomp">
+        <div class="eventos" id='eventscomp'>
             
         </div>
       </div>
