--- a/past.html
+++ b/past.html
@@ -61,7 +61,7 @@
                   
               </form>
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <input class="form-control me-2" type="search" id="namepast" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
@@ -89,6 +89,8 @@
     </footer>
     <script src="js/data_ae.js"></script>
     <script src="js/past.js"></script>
+    <script src="js/filterspast.js"></script>
+    <script src="js/checkspast.js"></script>
 </body>
 
 </html>
