--- a/upcoming.html
+++ b/upcoming.html
@@ -57,10 +57,11 @@
     <nav class="navbar bg-body-black">
         <div class="container text-black">
             <form action="/action_page.php" method="get" id="categupcom" class="d-flex justify-content-between">
-                
+              <label class="contact-label" for="name"></label>
+              <input class="class_checks contact-input" type="checkbox" name="name" id="name"> 
             </form>
           <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <input onkeyup='captureDataU()' id="nameU" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
         </div>
@@ -88,6 +89,9 @@
 </footer>
 <script src="js/data_ae.js"></script>
 <script src="js/upcom.js"></script>
+<script src="js/filtersU.js"></script>
+<script src="js/checksU.js"></script>
+
 </body>
 
 </html>
